...
    const [loading, setLoading] = useState(false);
    const [modalVisible, setModalVisible] = useState(false);
    const [modalType, setModalType] = useState('');

    const settingsList = [
        {
            title: 'Profile',
            icon: <UserIcon size={20} color="white" />,
            routeUrl: '/settings/profile'
        },
        {
            title: 'Businesses',
            icon: <BriefcaseIcon size={20} color="white" />,
...
        <SafeAreaView className="flex-1 bg-primary">
            
            <View className="flex-row items-center mt-4 px-3 gap-x-6">
                <TouchableOpacity onPress={() => router.back()}>
                    <ArrowLeftIcon size={30} color='white' />
                </TouchableOpacity>
                <Text className="text-3xl font-dsbold text-purple-500">Settings</Text>
            </View>

            <ScrollView className="p-4 mt-5" contentContainerStyle={{ paddingBottom: 30 }}>
                <View className="flex-1 flex-row h-[40] items-center rounded-full pl-2 border-gray-500 border">
                    <MagnifyingGlassIcon size={20} color="white" />
                    <TextInput
...
