...
        keyExtractor={(_, index) => index.toString()}
        renderItem={({ item, index }) => (
          <View style={styles.infoContainer}>
            {/* Destination Input */}
            <TextInput
              style={styles.input}
              placeholder="Enter Destination"
              placeholderTextColor={"gray"}
              value={item.destination}
              onChangeText={(text) => handleChange(text, index, "destination", "destination")}
            />
            
            {/* Day label & input field, time label & input field */}
...
      )}

      {!isKeyboardVisible && (
        <>
          {/* Add destination button */}
          <TouchableOpacity style={styles.submitButton} onPress={addDestination}>
            <Text style={styles.buttonText}>Add Destination</Text>
          </TouchableOpacity>

          {/* Submit itinerary button */}
          <TouchableOpacity style={styles.submitButton} onPress={handleSubmit}>
            <Text style={styles.buttonText}>Submit Itinerary</Text>
          </TouchableOpacity>
...
