...

        <View className="mt-5">

          { form.media.length === 0 ? (
            <TouchableOpacity onPress={pickMedia} className="p-4 rounded-lg flex items-center justify-center">
              <FolderPlusIcon size={70} color="#fff" />
              <Text className="text-white text-center font-bold">Add Media</Text>
            </TouchableOpacity>
          )
          :
          (
            <>
              <View className="flex-1 items-center my-5">
...
            />

            {
              form.location === null ? (
                <TouchableOpacity className="flex-row mt-2 p-3" onPress={() => setLocationModalVisible(true)}>
                  <MapIcon size={20} color="#fff" />
                  <Text className="text-gray-500 ml-2">Add location</Text>
                </TouchableOpacity>
              )
              :
              (
                <View className="flex-row mt-2 p-3">
                  <MapIcon size={25} color="#fff" />
...
