...
          </TouchableOpacity>

          {/* Search Bar */}
          <View className="flex-1 flex-row items-center bg-neutral-200 rounded-full pl-6">
            <MaterialIcons name="search" size={20} color="black" />
            <TextInput
              placeholder="Search locations"
              placeholderTextColor="gray"
              value={search}
              clearButtonMode="always"
              autoCapitalize="none"
              autoCorrect={false}
              className="flex-1 text-base mb-1 pl-1 tracking-wider"
...
